projects/compiler/test/typechecker/multi_error_reporting/bad_pub_location.abra
func foo() {
  pub val x = 123

  val y = x + []
}